# vata-app

./: .coderabbit.yaml  .cursorrules  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  chromatic.config.json  codebase-improvement-suggestions.md  components.json  drizzle.config.ts  eslint.config.js  index.html  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.ai_prompts/: vata-app.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  design-system-expert.md  docs-consistency.md  execute-issue.md  scope-validator.md  test-writer.md
.claude/commands/: commit-push-pr.md  docs-consistency.md  execute-issue.md  gedcom-standards.md  sqlite-standards.md
.claude/hooks/: cargo-check.sh  end-of-run.sh  english-guard.sh  lint-check.sh  prettier-format.sh  protect-files.sh  session-context.sh  shadcn-guard.sh  sql-guard.sh  tsc-check.sh
.cursor/rules/: database.mdc  (+26 more)
.githooks/: sql-guard.sh
.husky/: pre-commit
.sandcastle/: address-review.ts  main.ts  review.ts  run.ts  shared.test.ts  shared.ts
.storybook/: main.ts  preview.css  preview.tsx
docs/: README.md
documentation/: README.md  event-system-refactor-analysis.md
scripts/: setup-gh-project.sh
src/: App.tsx  PreferencesApp.tsx  TreeManagerTest.tsx  database.types.ts  index.css  main.tsx  routeTree.gen.ts  router.ts  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: icon.html
src-tauri/src/: lib.rs  main.rs
supabase/: config.toml  database.types.ts
(+1212 files in other folders)
