[package]
name = "vata-app"
version = "0.1.0"
description = "Vata — Genealogical tree management"
authors = ["Steve Bourgoin"]
license = "GPL-3.0-or-later"
repository = "https://github.com/vata-apps/vata-app"
homepage = "https://github.com/vata-apps/vata-app"
edition = "2021"

[lib]
name = "vata_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
tauri-plugin-mcp-bridge = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
